k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphite
spec:
  selector:
    matchLabels:
      run: graphite
  replicas: 1
  template:
    metadata:
      labels:
        run: graphite
    spec:
      containers:
      - name: graphite
        image: localhost:32000/graphite:1.0.2
        ports:
          - containerPort: 80
          - containerPort: 443
          - containerPort: 2003
          - containerPort: 2004
          - containerPort: 3000
        volumeMounts:
          - name: graphite
            subPath: graphite
            mountPath: /opt/graphite/storage
          - name: graphite
            subPath: grafana
            mountPath: /var/lib/grafana
          - name: graphite
            subPath: grafana.ini
            mountPath: /etc/grafana/grafana.ini
          - name: graphite
            subPath: grafana/logs
            mountPath: /var/log/grafana
      volumes:
        - name: graphite
          hostPath: 
            path: /srv/k8s/graphite
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: graphite-ingress
  annotations:
    INGRESS.kubernetes.io/rewrite-target: /
spec:  
  rules:
  - host: graphite.k8s.io
    http:
      paths:
      - path: /
        backend:
          serviceName: graphite
          servicePort: 80
  - host: grafana.k8s.io
    http:
      paths:
      - path: /
        backend:
          serviceName: graphite
          servicePort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: graphite
  labels:
    run: grapite
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: http
  - port: 443
    protocol: TCP
    targetPort: 443
    name: https
  - port: 2003
    protocol: TCP
    targetPort: 2003
    name: carbon-line
  - port: 2004
    protocol: TCP
    targetPort: 2004
    name: carbon-pickle
  - port: 3000
    protocol: TCP
    targetPort: 3000
    name: grafana
  selector:
    run: graphite
